remove ddns configuration
